// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Deck testing snapshot testing with cards 1`] = `
<div
  className="container"
>
  <div
    className="row"
  >
    <div
      className="col-6 card mb-1"
      onClick={[Function]}
    >
      <div
        className="row"
      >
        <b
          className="ml-1"
        >
          <b
            className="blackText"
          >
            6
          </b>
        </b>
      </div>
      <div
        className="row"
      >
        <img
          alt=""
          className="littleSuitImg ml-1"
          src="club.png"
        />
      </div>
      <div
        className="row justify-content-center"
      >
        <img
          alt=""
          className="bigSuitImg my-2"
          src="club.png"
        />
      </div>
      <div
        className="row justify-content-end"
      >
        <img
          alt=""
          className="littleSuitImg rotated mr-1"
          src="club.png"
        />
      </div>
      <div
        className="row justify-content-end"
      >
        <b
          className="rotated mr-1"
        >
          <b
            className="blackText"
          >
            6
          </b>
        </b>
      </div>
    </div>
    <div
      className="col-6 card mb-1 shirt"
    />
  </div>
  <div
    className="row"
  >
    <div
      className="col-6"
    />
    <div
      className="col-6"
    >
      <div
        className="container"
      >
        <div
          className="row justify-content-center"
        >
          <div
            className="col-auto"
          >
            <b>
              9
            </b>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Deck testing snapshot testing without cards 1`] = `
<div
  className="container"
>
  <div
    className="row"
  />
  <div
    className="row"
  >
    <div
      className="col-6"
    />
    <div
      className="col-6"
    >
      <div
        className="container"
      >
        <div
          className="row justify-content-center"
        >
          <div
            className="col-auto"
          >
            <b />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
